Makefile: Only setting F_CPU once. Adding runtime path to the linker so           LD_LIBRARY_PATH doesn't have to be used.

--- a/firmware/Makefile
+++ b/firmware/Makefile
@@ -1,11 +1,12 @@
 include Makefile.common
 
 AVR_PART=atmega48
+F_CPU=1000000
 AVR_CFLAGS=\
 	-Wall -gdwarf-2 -Os -std=gnu99 \
 	-mmcu=$(AVR_PART) \
 	-DSIMAVR_AVR_MCU='"$(AVR_PART)"' \
-	-DF_CPU=8000000 \
+	-DF_CPU=$(F_CPU) \
 	-fno-inline-small-functions \
 	-ffunction-sections -fdata-sections \
 	-Wl,--relax,--gc-sections \
@@ -23,7 +24,8 @@ CFLAGS=\
 
 LDFLAGS=\
 	-lsimavr \
-	-L$(SIMAVR)/simavr/$(OBJ)
+	-L$(SIMAVR)/simavr/$(OBJ) \
+	-Wl,-rpath,$(SIMAVR)/simavr/$(OBJ)
 
 OBJ = obj-${shell $(CC) -dumpmachine}
 
@@ -31,19 +33,18 @@ OBJ = obj-${shell $(CC) -dumpmachine}
 
 all: main.axf tests
 
-main.axf: main.c esc_spi.o.axf
-#esc_spi.c esc_spi.h
-esc_api.o.axf: esc_spi.h
+main.axf: main.c esc_engine.o.axf esc_spi.o.axf
+esc_engine.o.axf: esc_engine.h
+esc_spi.o.axf: esc_spi.h
 
-test_1_target.axf: esc_spi.o.axf
-#test_%_target.axf: test_%_target.c
+test_1_target.axf: esc_engine.o.axf esc_spi.o.axf
 
 tests: $(patsubst %.c,%,$(wildcard test_*_host.c))
 tests: $(patsubst %.c,%.axf,$(wildcard test_*_target.c))
 
 test: tests
 	@ls test_*_host | \
-		while read f; do LD_LIBRARY_PATH=$(SIMAVR)/simavr/$(OBJ) ./$$f; done
+		while read f; do ./$$f; done
 
 clean:
 	@rm -rf $(wildcard *.axf)
@@ -65,18 +66,17 @@ clean:
 %.s: %.axf
 	@$(AVR_OBJDUMP) -j .text -j .data -j .bss -d  $(<) > $(@)
 
-%.axf: %.c
-	@echo avr-gcc $(<)
-	$(AVR_CC) $(AVR_CFLAGS) $(^) -o $(@)
+#%.axf: %.c
+#	@echo avr-gcc $(<)
+#	$(AVR_CC) $(AVR_CFLAGS) $(<) -o $(@)
 
 %.axf: %.c
-	@echo avr-gcc $(<)
+	@echo avr-gcc -o $(@) $(^)
 	@$(AVR_CC) \
 		$(AVR_CFLAGS) \
-		-DF_CPU=1000000 \
 		-DTEST_NAME='"$(patsubst test_%_target.c,test_%,$<)"' \
 		$(^) -o $(@)
 
 %.o.axf: %.c
-	@echo avr-gcc $(<)
-	@$(AVR_CC) -c $(AVR_CFLAGS) $(^) -o $(@)
+	@echo avr-gcc -o $(@) $(<)
+	@$(AVR_CC) -c $(AVR_CFLAGS) $(<) -o $(@)
