o Trying to integrate FreeRTOS.

--- a/firmware/Makefile
+++ b/firmware/Makefile
@@ -1,5 +1,11 @@
 include Makefile.common
 
+# FreeRTOS stuff
+FREERTOS_PORT=ATMegaX8
+FREERTOS_CFLAGS= \
+	-Ifreertos/Source/include \
+	-Ifreertos/Source/portable/GCC/$(FREERTOS_PORT)
+
 AVR_PART=atmega48
 F_CPU=1000000
 AVR_CFLAGS=\
@@ -11,9 +17,12 @@ AVR_CFLAGS=\
 	-ffunction-sections -fdata-sections \
 	-Wl,--relax,--gc-sections \
 	-Wl,--undefined=_mmcu,--section-start=.mmcu=0x910000 \
-	-I$(SIMAVR)/include
+	-I$(SIMAVR)/include \
+	-I. \
+	$(FREERTOS_CFLAGS)
 
 AVR_CC=avr-gcc
+AVR_LD=avr-gcc
 AVR_OBJCOPY=avr-objcopy
 
 CFLAGS=\
@@ -31,13 +40,27 @@ LDFLAGS=\
 
 OBJ = obj-${shell $(CC) -dumpmachine}
 
-.PHONY: all test
+.PHONY: all test deps
 
-all: main.axf tests
+TARGETS=main.axf tests
+all: $(TARGETS)
 
-main.axf: main.c esc_engine.o.axf esc_spi.o.axf
-esc_engine.o.axf: esc_engine.h
-esc_spi.o.axf: esc_spi.h
+# FREERTOS_SOURCES = $(wildcard freertos/Source/*.c)
+FREERTOS_SOURCES = \
+	freertos/Source/list.c \
+	freertos/Source/queue.c \
+	freertos/Source/tasks.c \
+	freertos/Source/portable/GCC/$(FREERTOS_PORT)/port.c \
+	freertos/Source/portable/MemMang/heap_1.c
+
+FREERTOS_OBJECTS = $(patsubst %.c,%.o.axf, $(FREERTOS_SOURCES))
+FREERTOS_HEADERS = \
+	$(wildcard freertos/Source/include/*.h) \
+	freertos/Source/portable/GCC/$(FREERTOS_PORT)/portmacro.h \
+	FreeRTOSConfig.h
+
+main.axf: main.o.axf esc_engine.o.axf esc_spi.o.axf
+main.axf: $(FREERTOS_OBJECTS)
 
 test_1_target.axf: esc_engine.o.axf esc_spi.o.axf
 
@@ -53,6 +76,8 @@ clean:
 	@rm -rf $(wildcard *.o)
 	@rm -rf $(wildcard *.vcd)
 	@rm -rf $(wildcard test_*_host)
+	@rm -rf $(FREERTOS_OBJECTS)
+	@find . -name \*.d|xargs rm -f
 
 ##############################################################
 # Documentation
@@ -75,12 +100,12 @@ mkdir-%:
 	@mkdir -p $(patsubst mkdir-%,%,$@)
 
 %: %.c
-	@echo CC $@
+	@echo "  HOST: CC $@"
 	@$(CC) \
 		$(CFLAGS) \
 		$(LDFLAGS) \
 		-DTEST_NAME='"$(patsubst test_%_host.c,test_%,$<)"' \
-		$< -o $@
+		$< -MD -o $@
 
 %.hex: %.axf
 	@$(AVR_OBJCOPY) -j .text -j .data -j .eeprom -O ihex $(<) $(@)
@@ -88,13 +113,19 @@ mkdir-%:
 %.s: %.axf
 	@$(AVR_OBJDUMP) -j .text -j .data -j .bss -d  $(<) > $(@)
 
-%.axf: %.c
-	@echo avr-gcc -o $(@) $(^)
-	@$(AVR_CC) \
+%.axf: %.o.axf
+	@echo "TARGET: LD" -o $(@)
+	@$(AVR_LD) \
 		$(AVR_CFLAGS) \
-		-DTEST_NAME='"$(patsubst test_%_target.c,test_%,$<)"' \
-		$(^) -o $(@)
+		-Wl,-Map=$(basename $@).map \
+		$(^) -MD -o $(@)
 
 %.o.axf: %.c
-	@echo avr-gcc -o $(@) $(<)
-	@$(AVR_CC) -c $(AVR_CFLAGS) $(<) -o $(@)
+	@echo "TARGET: CC" -o $(@) $(<)
+	@$(AVR_CC) \
+		$(AVR_CFLAGS) \
+		$(filter -DTEST_NAME=%,$(patsubst test_%_target.c,-DTEST_NAME='"test_%"',$<)) \
+		-MD -c $(<) -o $(@)
+
+-include $(patsubst %.c,%.o.d,$(FREERTOS_SOURCES))
+-include $(patsubst %.c,%.o.d,$(wildcard *.c))
